--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack"
+    "deploy": "firebase deploy"
   },
   "repository": {
     "type": "git",
@@ -14,12 +14,5 @@
   "bugs": {
     "url": "https://github.com/akuvarina/rest-in-zatoka/issues"
   },
-  "homepage": "https://github.com/akuvarina/rest-in-zatoka#readme",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-imagemin": "^7.1.0"
-  },
-  "dependencies": {
-    "gulp-minify": "^3.1.0"
-  }
+  "homepage": "https://github.com/akuvarina/rest-in-zatoka#readme"
 }
